--- a/templates/home.html
+++ b/templates/home.html
@@ -4,8 +4,8 @@
 
 {% block content %}
 {% if user.is_authenticated %}
- Hi, {{ user.username }}
- <p><a href="{% url 'logout' %}">Logout!</a></p>
+ <h1>Hi, {{ user.username }}</h1>
+ <a href="{% url 'logout' %}" class="btn btn-primary">Logout!</a>
 {% else %}
  <p>You are not logged in!</p>
 {% endif %}
