--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -10,7 +10,8 @@
     <form method="post">
         {% csrf_token %}
         {{ form|crispy }}
-        <button class="btn btn-success ml-2" type="submit">Login</button>
+        <button class="btn btn-success" type="submit">Login</button>
+        <a href="/users/password_reset/" class="btn btn-secondary">Forgot password?</a>
     </form>
 
 {% endblock %}
