--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,11 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark mb-4">
         <div class="container-fluid">
             <a href="{% url 'home' %}" class="navbar-brand">Newspaper</a>
+            {% if user.is_authenticated %}
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item"><a href="{% url 'article_new' %}">+ New</a></li>
+                </ul>
+            {% endif %}
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
