--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -17,6 +17,15 @@
             <div class="card-footer text-center text-muted">
                 <a href="{% url 'article_edit' article.pk %}" class="btn btn-info">Edit</a> | <a href="{% url 'article_delete' article.pk %}" class="btn btn-danger">Delete</a>
             </div>
+            <div class="card-footer">
+                {% for comment in article.comments.all %}
+                    <p>
+                        <span class="font-weight-bold">{{ comment.author }} &middot;</span>
+                        {{ comment }}
+                    </p>
+                {% endfor %}
+            </div>
+
         </div>
         <br/>
 
